<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/theme">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="117dp"
        android:layout_height="99dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editText8"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/key" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/text8"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editText8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="247dp"
        android:layout_height="62dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="395dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text9"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="238dp"
        android:layout_height="53dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="328dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text3"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <Button
        android:id="@+id/button"
        android:layout_width="280dp"
        android:layout_height="39dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="269dp"
        android:text="@string/text10"
        android:background="@drawable/button_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

    <Button
        android:id="@+id/button4"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="193dp"
        android:gravity="center"
        android:text="@string/text11"
        android:background="@drawable/button_background"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="176dp"
        android:layout_height="64dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="122dp"
        android:text="@string/text13"
        android:background="@drawable/button_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />


</androidx.constraintlayout.widget.ConstraintLayout>