<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgotpassword"
    android:background="@drawable/theme">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="134dp"
        android:layout_height="110dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/editText10"
        app:layout_constraintEnd_toStartOf="@+id/editText7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lock" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="63dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/text12"
        app:layout_constraintBottom_toTopOf="@+id/editText10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="267dp"
        android:layout_height="98dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/text14"
        app:layout_constraintBottom_toTopOf="@+id/editText12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text2"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText10" />

    <Button
        android:id="@+id/button7"
        android:layout_width="153dp"
        android:layout_height="55dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="177dp"
        android:text="@string/text15"
        android:background="@drawable/button_background"
        android:onClick="click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText12" />

</androidx.constraintlayout.widget.ConstraintLayout>